archive/ingress/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: fizz
spec:
  type: NodePort
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
