archive/ingress/Ingress-backup.yml
#  \
#  \\,
#   \\\,^,.,,.                     Zero to Hero
#   ,;7~((\))`;;,,               <zerotohero.dev>
#   ,(@') ;)`))\;;',    stay up to date, be curious: learn
#    )  . ),((  ))\;,
#   /;`,,/7),)) )) )\,,
#  (& )`   (,((,((;( ))\,

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fizz
  name: cerberus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /crypto/(.*)
            pathType: Prefix
            backend:
              service:
                name: crypto
                port:
                  number: 80
          - path: /idm/(.*)
            pathType: Prefix
            backend:
              service:
                name: idm
                port:
                  number: 80
          - path: /questions/(.*)
            pathType: Prefix
            backend:
              service:
                name: questions
                port:
                  number: 80
          - path: /store/(.*)
            pathType: Prefix
            backend:
              service:
                name: store
                port:
                  number: 80
