archive/ingress/ingress-ng.yml
apiVersion: networking.k8s.io/v1                                                    
kind: Ingress                                                                       
metadata:                                                                           
 name: cerberus                                                                     
 namespace: fizz                                                                    
 annotations:                                                                      
   kubernetes.io/ingress.class: alb                                                
   #Share a single ALB with all Ingress rules with a specific group name           
   alb.ingress.kubernetes.io/group.name: fizz                                      
   alb.ingress.kubernetes.io/target-type: instance                                 
   alb.ingress.kubernetes.io/scheme: internet-facing                               
   alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:340111760086:certificate/45330a0a-dbae-41a9-a111-13ed2220cf5bQ"
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'                       
   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:                                                                               
 rules:                                                                             
   - host: api.fizzbuzz.pro                                                         
     http:                                                                          
       paths:                                                                       
         - path: /*                                                                 
           pathType: Prefix                                                         
           backend:                                                                 
             service:                                                               
               name: crypto                                                         
               port:                                                                
                 number: 9001
